--- a/docs/v2.md
+++ b/docs/v2.md
@@ -1,7 +1,7 @@
 #### Chức năng đăng nhập sẽ như sau:
 
-![alt text](docs/images/image.png)
+![alt text](images/image.png)
 
 #### Chức năng đăng kí sẽ như sau:
 
-![alt text](docs/images/image-1.png)
+![alt text](images/image-1.png)
