--- a/docs/v4.md
+++ b/docs/v4.md
@@ -1,15 +1,15 @@
 #### User có thể xóa nhiều bài post cùng lúc
 
 - Đầu tiên ta cần chọn ghi chú cần xóa:  
-  ![alt text](chonanh)
+  ![alt text](images/chonanh)
 
 - Tiếp theo nhấn vào nút xóa và đây là kết quả:
-  ![alt text](ketqua.png)
+  ![alt text](images/ketqua.png)
 
 #### Ngoài ra user có thể chỉnh sửa lại ghi chú của mình
 
 - Cụ thể:
-  ![alt text](chinhsua.png)
+  ![alt text](images/chinhsua.png)
 
 - Kết quả:
-  ![alt text](resuts.png)
+  ![alt text](images/resuts.png)
