--- a/docs/v4.md
+++ b/docs/v4.md
@@ -1,7 +1,7 @@
 #### User có thể xóa nhiều bài post cùng lúc
 
 - Đầu tiên ta cần chọn ghi chú cần xóa:  
-  ![alt text](images/chonanh)
+  ![alt text](images/chonanh.png)
 
 - Tiếp theo nhấn vào nút xóa và đây là kết quả:
   ![alt text](images/ketqua.png)
@@ -12,4 +12,4 @@
   ![alt text](images/chinhsua.png)
 
 - Kết quả:
-  ![alt text](images/resuts.png)
+  ![alt text](images/results.png)
