--- a/docs/v3.md
+++ b/docs/v3.md
@@ -4,7 +4,7 @@
 
 #### Trang chủ của admin sẽ bao gồm phần quản lý user như reset mật khẩu và khóa user
 
-![alt text](images/home_adminp.ng)
+![alt text](images/home_admin.png)
 
 - Khi khóa tài khoản của user thì user sẽ không đăng nhập được, cụ thể:
   ![alt text](images/khoa_user.png)
