--- a/docs/v5.md
+++ b/docs/v5.md
@@ -1,7 +1,7 @@
-#### Khi viết 5 ghi chú sẽ tưj động phân trang qua một trang mới
+#### Khi viết 5 ghi chú sẽ tựự động phân trang qua một trang mới
 
 - Đây là trang đầu tiên:
-  ![alt text](images/page1.png.png)
+  ![alt text](images/page1.png)
 
 - Đây là trang thứ 2:
   ![alt text](images/page2.png)
